--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -18,3 +18,7 @@ consultarNFSE.incluir.sucesso = NFS-e incluída(s) com sucesso!
 consultarNFSE.exportar.sucesso = NFS-e(s) exportadas para o sistema TOTVS RM com sucesso!
 consultarNFSE.exportar.nenhum.selecionado = Nenhuma NFS-e selecionada.
 
+# Coligadas #
+coligada.ativar = Coligada ativada com sucesso!
+coligada.inativar = Coligada inativada com sucesso!
+
