--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -22,3 +22,7 @@ consultarNFSE.exportar.nenhum.selecionado = Nenhuma NFS-e selecionada.
 coligada.ativar = Coligada ativada com sucesso!
 coligada.inativar = Coligada inativada com sucesso!
 
+# Usuarios #
+usuario.sincronizado = Usuários sincronizados com o Active Directory!
+
+
