--- a/portaljcr/pom.xml
+++ b/portaljcr/pom.xml
@@ -103,9 +103,16 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.myfaces.extensions.cdi.core</groupId>
-			<artifactId>myfaces-extcdi-core-api</artifactId>
-			<version>1.0.6</version>
+			<groupId>org.apache.deltaspike.modules</groupId>
+			<artifactId>deltaspike-jsf-module-api</artifactId>
+			<version>1.8.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.deltaspike.modules</groupId>
+			<artifactId>deltaspike-jsf-module-impl</artifactId>
+			<version>1.8.0</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
