--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -24,5 +24,9 @@ coligada.inativar = Coligada inativada com sucesso!
 
 # Usuarios #
 usuario.sincronizado = Usuários sincronizados com o Active Directory!
+usuario.salvar = Usuário atualizado com sucesso!
+usuario.grupo.obrigatorio = Favor selecionar um grupo.
+usuario.coligada.obrigatorio = Favor selecionar uma coligada.
+
 
 
