Grupo de Cotação

--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -28,5 +28,12 @@ usuario.salvar = Usuário atualizado com sucesso!
 usuario.grupo.obrigatorio = Favor selecionar um grupo.
 usuario.coligada.obrigatorio = Favor selecionar uma coligada.
 
+# Grupo de Cotação #
+grupo.cotacao.usuario.obrigatorio = Favor selecionar um usuário.
+grupo.cotacao.usuario.vinculado = Usuário já está vinculado ao grupo.
+grupo.cotacao.usuario.vazio = O grupo de cotação deve conter no minímo 1 contador.
+grupo.cotacao.salvar = Grupo de Cotação criado com sucesso!
+grupo.cotacao.existente = Grupo de Cotação já existe.
+
 
 
