--- a/portaljcr/pom.xml
+++ b/portaljcr/pom.xml
@@ -88,6 +88,11 @@
 			<version>6.2</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.primefaces.extensions</groupId>
+		    <artifactId>primefaces-extensions</artifactId>
+		    <version>6.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>1.0.10</version>
