Solicitação de Compra

--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -32,8 +32,11 @@ usuario.coligada.obrigatorio = Favor selecionar uma coligada.
 grupo.cotacao.usuario.obrigatorio = Favor selecionar um usuário.
 grupo.cotacao.usuario.vinculado = Usuário já está vinculado ao grupo.
 grupo.cotacao.usuario.vazio = O grupo de cotação deve conter no minímo 1 contador.
-grupo.cotacao.salvar = Grupo de Cotação criado com sucesso!
+grupo.cotacao.salvar.incluir = Grupo de Cotação criado com sucesso!
+grupo.cotacao.salvar.alterar = Grupo de Cotação alterado com sucesso!
 grupo.cotacao.existente = Grupo de Cotação já existe.
+grupo.cotacao.ativar = Grupo de Cotação ativado com sucesso!
+grupo.cotacao.inativar = Grupo de Cotação inativado com sucesso!
 
 
 
