--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -38,5 +38,15 @@ grupo.cotacao.existente = Grupo de Cotação já existe.
 grupo.cotacao.ativar = Grupo de Cotação ativado com sucesso!
 grupo.cotacao.inativar = Grupo de Cotação inativado com sucesso!
 
+# Categoria de Chamado #
+categoria.chamado.subcategoria.nome.obrigatorio = Nome da Subcategoria é obrigatório.
+categoria.chamado.subcategoria.existente = Subcategoria já existe.
+categoria.chamado.subcategoria.nome.obrigatorio = Nome da Subcategoria é obrigatório.
+categoria.chamado.subcategoria.existente = Subcategoria já existe.
+categoria.chamado.subcategoria.vazio = A Categoria de Chamado deve conter no minímo 1 subcategoria.
+grupo.cotacao.salvar.incluir = Categoria de Chamado criada com sucesso!
+grupo.cotacao.salvar.alterar = Categoria de Chamado alterada com sucesso!
+grupo.cotacao.existente = Categoria de Chamado já existe.
+
 
 
