--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -44,9 +44,12 @@ categoria.chamado.subcategoria.existente = Subcategoria já existe.
 categoria.chamado.subcategoria.nome.obrigatorio = Nome da Subcategoria é obrigatório.
 categoria.chamado.subcategoria.existente = Subcategoria já existe.
 categoria.chamado.subcategoria.vazio = A Categoria de Chamado deve conter no minímo 1 subcategoria.
-grupo.cotacao.salvar.incluir = Categoria de Chamado criada com sucesso!
-grupo.cotacao.salvar.alterar = Categoria de Chamado alterada com sucesso!
-grupo.cotacao.existente = Categoria de Chamado já existe.
+categoria.chamado.salvar.incluir = Categoria de Chamado criada com sucesso!
+categoria.chamado.salvar.alterar = Categoria de Chamado alterada com sucesso!
+categoria.chamado.existente = Categoria de Chamado já existe.
+
+# Chamado #
+chamado.salvar = Chamado aberto com sucesso!
 
 
 
