--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -51,6 +51,7 @@ categoria.chamado.existente = Categoria de Chamado já existe.
 # Chamado #
 chamado.salvar = Chamado aberto com sucesso!
 chamado.atribuido = Chamado atribuído para você!
+chamado.mensagem = Mensagem enviada com sucesso!
 
 
 
