--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -52,6 +52,8 @@ categoria.chamado.existente = Categoria de Chamado já existe.
 chamado.salvar = Chamado aberto com sucesso!
 chamado.atribuido = Chamado atribuído para você!
 chamado.mensagem = Mensagem enviada com sucesso!
+chamado.anexo.sucesso = Anexo incluído com sucesso!
+chamado.resolvido = Chamado Nº {0} resolvido!
 
 
 
