Solicitação de Compra

--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -7,7 +7,8 @@ message.datatable.noRecords = Nenhum registro encontrado.
 message.empty = {0}
 message.default = Ocorreu um erro ao executar a operação solicitada.
 message.default.erro = Ocorreu um erro ao {0}.
-message.login.erro = Sistema temporariamente indisponível, contacte o administrador.´
+message.login.erro = Sistema temporariamente indisponível, contacte o administrador.
+message.campos.obrigatorios = Favor preencher os campos obrigatórios (*)
 
 
 # Consultar NFSE #
@@ -52,8 +53,9 @@ categoria.chamado.existente = Categoria de Chamado já existe.
 chamado.salvar = Chamado aberto com sucesso!
 chamado.atribuido = Chamado atribuído para você!
 chamado.mensagem = Mensagem enviada com sucesso!
-chamado.anexo.sucesso = Anexo incluído com sucesso!
-chamado.resolvido = Chamado Nº {0} resolvido!
+
+#Solicitacao de Compra
+solicitacao.compra.sucesso = Solicitação de Compra criada com sucesso!
 
 
 
