--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -53,6 +53,8 @@ categoria.chamado.existente = Categoria de Chamado já existe.
 chamado.salvar = Chamado aberto com sucesso!
 chamado.atribuido = Chamado atribuído para você!
 chamado.mensagem = Mensagem enviada com sucesso!
+chamado.resolvido = Chamado Nº {0} solucionado!
+chamado.encerrado = Chamado Nº {0} encerrado!
 
 #Solicitacao de Compra
 solicitacao.compra.sucesso = Solicitação de Compra criada com sucesso!
