--- a/portaljcr/WebContent/WEB-INF/web.xml
+++ b/portaljcr/WebContent/WEB-INF/web.xml
@@ -92,5 +92,9 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>javax.ws.rs.core.Application</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>
  
 </web-app>
