Cancelamento das Solicitações

--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -58,6 +58,7 @@ chamado.encerrado = Chamado Nº {0} encerrado!
 
 #Solicitacao de Compra
 solicitacao.compra.sucesso = Solicitação de Compra enviada para aprovação com sucesso!
+solicitacao.compra.cancelada = Solicitação de Compra cancelada com sucesso!
 
 
 
