--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -60,5 +60,8 @@ chamado.encerrado = Chamado Nº {0} encerrado!
 solicitacao.compra.sucesso = Solicitação de Compra enviada para aprovação com sucesso!
 solicitacao.compra.cancelada = Solicitação de Compra cancelada com sucesso!
 
+#Cotação
+solicitacao.compra.cotacao.iniciar = Cotação para a solicitação de compra Nº {0} iniciada.
+
 
 
