--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -57,7 +57,7 @@ chamado.resolvido = Chamado Nº {0} solucionado!
 chamado.encerrado = Chamado Nº {0} encerrado!
 
 #Solicitacao de Compra
-solicitacao.compra.sucesso = Solicitação de Compra enviada para aprovação com sucesso!
+solicitacao.compra.sucesso = Solicitação de Compra enviada para aprovação!
 solicitacao.compra.cancelada = Solicitação de Compra cancelada com sucesso!
 
 #Cotação
