--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -62,7 +62,8 @@ solicitacao.compra.cancelada = Solicitação de Compra cancelada com sucesso!
 
 #Cotação
 solicitacao.compra.cotacao.iniciar = Cotação para a solicitação de compra Nº {0} iniciada.
-cotacao.incluida = Cotação incluída com sucesso!
+cotacao.incluida = Cotação foi salva com sucesso!
+cotacao.excluida = Cotação foi excluída com sucesso!
 
 
 
