--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -64,6 +64,7 @@ solicitacao.compra.cancelada = Solicitação de Compra cancelada com sucesso!
 solicitacao.compra.cotacao.iniciar = Cotação para a solicitação de compra Nº {0} iniciada.
 cotacao.incluida = Cotação foi salva com sucesso!
 cotacao.excluida = Cotação foi excluída com sucesso!
+cotacao.minimo = Para concluir a cotação é necessário que seja realizado no minímo 3 cotações.
 
 
 
