--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -65,6 +65,7 @@ solicitacao.compra.cotacao.iniciar = Cotação para a solicitação de compra Nº {0}
 cotacao.incluida = Cotação foi salva com sucesso!
 cotacao.excluida = Cotação foi excluída com sucesso!
 cotacao.minimo = Para concluir a cotação é necessário que seja realizado no minímo 3 cotações.
+cotacao.concluida = Cotação concluída e enviada para o solicitante para aprovação.
 
 
 
