--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -66,6 +66,7 @@ cotacao.incluida = Cotação foi salva com sucesso!
 cotacao.excluida = Cotação foi excluída com sucesso!
 cotacao.minimo = Para concluir a cotação é necessário que seja realizado no minímo 3 cotações.
 cotacao.concluida = Cotação concluída e enviada para o solicitante para aprovação.
+cotacao.nenhuma = Nenhuma cotação cadastrada, para continuar cadastre uma cotação.
 
 
 
