--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -57,7 +57,7 @@ chamado.resolvido = Chamado Nº {0} solucionado!
 chamado.encerrado = Chamado Nº {0} encerrado!
 
 #Solicitacao de Compra
-solicitacao.compra.sucesso = Solicitação de Compra enviada para aprovação!
+solicitacao.compra.sucesso = Solicitação de Compra realizada com sucesso!
 solicitacao.compra.cancelada = Solicitação de Compra cancelada com sucesso!
 
 #Cotação
@@ -67,6 +67,8 @@ cotacao.excluida = Cotação foi excluída com sucesso!
 cotacao.minimo = Para concluir a cotação é necessário que seja realizado no minímo 3 cotações.
 cotacao.concluida = Cotação concluída e enviada para o solicitante para aprovação.
 cotacao.nenhuma = Nenhuma cotação cadastrada, para continuar cadastre uma cotação.
+cotacao.selecionada = Nenhuma cotação selecionada, para continuar selecione uma cotação.
+cotacao.aprovada = Solicitação liberada para compra com sucesso!
 
 
 
