--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -69,6 +69,6 @@ cotacao.concluida = Cotação concluída e enviada para o solicitante para aprovaçã
 cotacao.nenhuma = Nenhuma cotação cadastrada, para continuar cadastre uma cotação.
 cotacao.selecionada = Nenhuma cotação selecionada, para continuar selecione uma cotação.
 cotacao.aprovada = Solicitação liberada para compra com sucesso!
-
+cotacao.mais.cotacoes = Solicitação reenviada para cotador.
 
 
