--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -59,9 +59,9 @@ chamado.encerrado = Chamado Nº {0} encerrado!
 #Solicitacao de Compra
 solicitacao.compra.sucesso = Solicitação de Compra realizada com sucesso!
 solicitacao.compra.cancelada = Solicitação de Compra cancelada com sucesso!
+solicitacao.compra.cotacao.iniciar = Cotação para a solicitação de compra Nº {0} iniciada.
 
 #Cotação
-solicitacao.compra.cotacao.iniciar = Cotação para a solicitação de compra Nº {0} iniciada.
 cotacao.incluida = Cotação foi salva com sucesso!
 cotacao.excluida = Cotação foi excluída com sucesso!
 cotacao.minimo = Para concluir a cotação é necessário que seja realizado no minímo 3 cotações.
@@ -70,5 +70,9 @@ cotacao.nenhuma = Nenhuma cotação cadastrada, para continuar cadastre uma cotaçã
 cotacao.selecionada = Nenhuma cotação selecionada, para continuar selecione uma cotação.
 cotacao.aprovada = Solicitação liberada para compra com sucesso!
 cotacao.mais.cotacoes = Solicitação reenviada para cotador.
+
+#Gerar Ordem de Compra
+gerar.ordem.compra.sucesso = Movimento Nº {0} gerado com sucesso na coligada {1}.
+
 
 
