--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -69,10 +69,13 @@ cotacao.concluida = Cotação concluída e enviada para o solicitante para aprovaçã
 cotacao.nenhuma = Nenhuma cotação cadastrada, para continuar cadastre uma cotação.
 cotacao.selecionada = Nenhuma cotação selecionada, para continuar selecione uma cotação.
 cotacao.aprovada = Solicitação liberada para compra com sucesso!
+cotacao.reenviada = Valor da cotação ultrapassou a alçada do aprovador ou aprovador foi alterado, sua solicitação foi reenviada para aprovação antes da liberação.
 cotacao.mais.cotacoes = Solicitação reenviada para cotador.
 
 #Gerar Ordem de Compra
 gerar.ordem.compra.sucesso = Movimento Nº {0} gerado com sucesso na coligada {1}.
+gerar.ordem.compra.sem.orcamento = Produto/Serviço {0} não possui orçamento no Centro de Custo.
+gerar.ordem.compra.saldo.orcamento = Produto/Serviço {0} não possui orçamento no Centro de Custo. Saldo disponível: {1}.
 
 
 
