--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -55,6 +55,7 @@ chamado.atribuido = Chamado atribuído para você!
 chamado.mensagem = Mensagem enviada com sucesso!
 chamado.resolvido = Chamado Nº {0} solucionado!
 chamado.encerrado = Chamado Nº {0} encerrado!
+chamado.atribuido.para = Chamado atribuído para {0}!
 
 #Solicitacao de Compra
 solicitacao.compra.sucesso = Solicitação de Compra realizada com sucesso!
@@ -76,6 +77,7 @@ cotacao.mais.cotacoes = Solicitação reenviada para cotador.
 gerar.ordem.compra.sucesso = Movimento Nº {0} gerado com sucesso na coligada {1}.
 gerar.ordem.compra.sem.orcamento = Produto/Serviço {0} não possui orçamento no Centro de Custo.
 gerar.ordem.compra.saldo.orcamento = Produto/Serviço {0} não possui orçamento no Centro de Custo. Saldo disponível: {1}.
+gerar.ordem.compras.sucesso = Movimentos Nº {0} gerados com sucesso na coligada {1}.
 
 
 
