--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -79,5 +79,10 @@ gerar.ordem.compra.sem.orcamento = Produto/Serviço {0} não possui orçamento no C
 gerar.ordem.compra.saldo.orcamento = Produto/Serviço {0} não possui orçamento no Centro de Custo. Saldo disponível: {1}.
 gerar.ordem.compras.sucesso = Movimentos Nº {0} gerados com sucesso na coligada {1}.
 
+#Ajuste Orçamentário
+ajuste.orcamentario.imcompativel = Transferência para o mesmo orçamento não é permitido.
+ajuste.orcamentario.saldo.insuficiente = Saldo insuficiente no período de {0} para a Natureza Orçamentária {1}.
+
+
 
 
