--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -82,6 +82,7 @@ gerar.ordem.compras.sucesso = Movimentos Nº {0} gerados com sucesso na coligada 
 #Ajuste Orçamentário
 ajuste.orcamentario.imcompativel = Transferência para o mesmo orçamento não é permitido.
 ajuste.orcamentario.saldo.insuficiente = Saldo insuficiente no período de {0} para a Natureza Orçamentária {1}.
+ajuste.realizado = Ajuste orçamentário realizado com sucesso!
 
 
 
