--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -84,6 +84,12 @@ ajuste.orcamentario.imcompativel = Transferência para o mesmo orçamento não é pe
 ajuste.orcamentario.saldo.insuficiente = Saldo insuficiente no período de {0} para a Natureza Orçamentária {1}.
 ajuste.realizado = Ajuste orçamentário realizado com sucesso!
 
+#Responsável do Orçamento
+responsavel.orcamento = Favor preencher um responsável.
+responsavel.existe = Responsável já existe neste centro de custo.
+usuario.adicionado = {0} incluído no centro de custo {1}.
+usuario.removido = {0} excluído no centro de custo {1}.
+
 
 
 
