--- a/portaljcr/config/prod/prod.properties
+++ b/portaljcr/config/prod/prod.properties
@@ -1,3 +1,4 @@
+ambiente = PRODUCAO
 url.portal = http://portal.grupojcr.com.br/portaljcr
 ambiente.fluig = http://10.0.0.62:8180
 ambiente.rm = http://10.0.0.48
