--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -90,6 +90,9 @@ responsavel.existe = Responsável já existe neste centro de custo.
 usuario.adicionado = {0} incluído no centro de custo {1}.
 usuario.removido = {0} excluído no centro de custo {1}.
 
+#Holerite
+holerite.chapa.nao.identificada = Chapa não identificada.
+
 
 
 
