--- a/portaljcr/config/desenv/desenv.properties
+++ b/portaljcr/config/desenv/desenv.properties
@@ -1,6 +1,7 @@
+ambiente = DESENVOLVIMENTO
 url.portal = http://localhost:8080/portaljcr
 ambiente.fluig = http://10.0.0.63:7180
-ambiente.rm = http://10.0.0.229
+ambiente.rm = http://10.0.0.119
 
 processo.fluig.solicitacao.compra = Solicitacao de Compra
 
