--- a/portaljcr/pom.xml
+++ b/portaljcr/pom.xml
@@ -119,6 +119,11 @@
 			<version>1.8.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    		<groupId>net.sf.jasperreports</groupId>
+    		<artifactId>jasperreports</artifactId>
+    		<version>6.5.1</version>
+		</dependency>
 	</dependencies>
 	
 	<profiles>
