--- a/portaljcr/pom.xml
+++ b/portaljcr/pom.xml
@@ -124,6 +124,16 @@
     		<artifactId>jasperreports</artifactId>
     		<version>6.5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.ucanaccess</groupId>
+			<artifactId>ucanaccess</artifactId>
+			<version>4.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.healthmarketscience.jackcess</groupId>
+			<artifactId>jackcess-encrypt</artifactId>
+			<version>2.1.4</version>
+		</dependency>
 	</dependencies>
 	
 	<profiles>
