ajuste de ponto

--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -93,6 +93,10 @@ usuario.removido = {0} excluído no centro de custo {1}.
 #Holerite
 holerite.chapa.nao.identificada = Chapa não identificada.
 
+#Ajuste de Ponto
+ajuste.ponto.campos = Favor preencher os dados da batida.
+ajuste.ponto.horario.invalido = Horário inválido. Permitido até 23:59h.
+
 
 
 
