--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -96,6 +96,7 @@ holerite.chapa.nao.identificada = Chapa não identificada.
 #Ajuste de Ponto
 ajuste.ponto.campos = Favor preencher os dados da batida.
 ajuste.ponto.horario.invalido = Horário inválido. Permitido até 23:59h.
+ajuste.ponto.batida.existe = Está batida já existe.
 
 
 
