Ajsute de Ponto 95%

--- a/portaljcr/config/desenv/desenv.properties
+++ b/portaljcr/config/desenv/desenv.properties
@@ -4,6 +4,7 @@ ambiente.fluig = http://10.0.0.63:7180
 ambiente.rm = http://10.0.0.119
 
 processo.fluig.solicitacao.compra = Solicitacao de Compra
+processo.fluig.aprovacao.ponto = Aprovação de Ponto
 
 usuario.fluig = fluig_admin
 chave.fluig = Flu1g@dm1m
