--- a/portaljcr/config/prod/prod.properties
+++ b/portaljcr/config/prod/prod.properties
@@ -4,6 +4,7 @@ ambiente.fluig = http://10.0.0.62:8180
 ambiente.rm = http://10.0.0.48
 
 processo.fluig.solicitacao.compra = Solicitação de Compra
+processo.fluig.aprovacao.ponto = Aprovação de Ponto
 
 usuario.fluig = fluig_admin
 chave.fluig = Flu1g@dm1m
