--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -97,6 +97,7 @@ holerite.chapa.nao.identificada = Chapa não identificada.
 ajuste.ponto.campos = Favor preencher os dados da batida.
 ajuste.ponto.horario.invalido = Horário inválido. Permitido até 23:59h.
 ajuste.ponto.batida.existe = Está batida já existe.
+ajuste.ponto.enviada.aprovacao = Ponto enviado para Aprovação.
 
 
 
