ajuste de ponto 99%

--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -98,6 +98,8 @@ ajuste.ponto.campos = Favor preencher os dados da batida.
 ajuste.ponto.horario.invalido = Horário inválido. Permitido até 23:59h.
 ajuste.ponto.batida.existe = Está batida já existe.
 ajuste.ponto.enviada.aprovacao = Ponto enviado para Aprovação.
+ajuste.ponto.nao.utiliza = Seu usuário não possui cartão ponto.
+ajuste.ponto.periodo.inativo = Período {0} não está liberado para correção. Período de Correção: {1}.
 
 
 
