--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -101,6 +101,7 @@ ajuste.ponto.enviada.aprovacao = Ponto enviado para Aprovação.
 ajuste.ponto.nao.utiliza = Seu usuário não possui cartão ponto.
 ajuste.ponto.periodo.inativo = Período {0} não está liberado para correção. Período de Correção: {1}.
 
-
-
+#Consultar Ponto
+consultar.ponto.periodo.obrigatorio = Favor preencher o período válido.
+consultar.ponto.máximo.dias = É permitido apenas períodos com no máximo 180 dias.
 
