--- a/portaljcr/pom.xml
+++ b/portaljcr/pom.xml
@@ -73,6 +73,11 @@
 			<version>3.17</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 			<version>2.2.16</version>
