--- a/portaljcr/resources/ApplicationMessages.properties
+++ b/portaljcr/resources/ApplicationMessages.properties
@@ -104,4 +104,5 @@ ajuste.ponto.periodo.inativo = Período {0} não está liberado para correção. Perí
 #Consultar Ponto
 consultar.ponto.periodo.obrigatorio = Favor preencher o período válido.
 consultar.ponto.máximo.dias = É permitido apenas períodos com no máximo 180 dias.
+consultar.ponto.periodo.invalido = Período inválido.
 
