--- a/portaljcr/resources/enviroment.properties
+++ b/portaljcr/resources/enviroment.properties
@@ -1,8 +1,10 @@
-url.portal = http://10.0.0.69:8080/portaljcr
-ambiente.fluig = http://10.0.0.63:7180
-ambiente.rm = http://10.0.0.229
+ambiente = PRODUCAO
+url.portal = http://portal.grupojcr.com.br/portaljcr
+ambiente.fluig = http://10.0.0.62:8180
+ambiente.rm = http://10.0.0.48
 
-processo.fluig.solicitacao.compra = Solicitacao de Compra
+processo.fluig.solicitacao.compra = Solicitação de Compra
+processo.fluig.aprovacao.ponto = Aprovação de Ponto
 
 usuario.fluig = fluig_admin
 chave.fluig = Flu1g@dm1m
